--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0%;
 }
 body{
-    background-image: url("pencilonyellow.jpg");
+    background-image: url("img/pencilonyellow.jpg");
     height: 100vh;
   background-size: cover;
   background-position: center;  
